<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/registerstyle"
        android:id="@+id/linlaydaftar">

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="90dp"
            android:gravity="center"
            android:fontFamily="sans-serif-light"
            android:text="@string/rekap_surat"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginHorizontal="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/register"
                android:background="@drawable/background_profile"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/purple"
                android:textSize="30sp"
                android:layout_marginVertical="10dp"
                />


            <EditText
                android:id="@+id/email_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:background="@drawable/edittextstyle"/>

            <EditText
                android:id="@+id/password_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:background="@drawable/edittextstyle"
                android:inputType="textPassword"/>

            <Button
                android:id="@+id/btn_reg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buttonstyle"
                android:textColor="#fff"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/register"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="@string/ket_login"
                android:textAllCaps="false"
                android:textColor="@color/purple"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>
